<resources>
    <string name="app_name">Drink Tracker</string>
    <string name="app_confirm_button">Bestätigen</string>

    <string name="welcome_developers_text">von Christoph &amp; Jonas</string>
    <string name="welcome_input_name_text">Name</string>
    <string name="welcome_weight_text">Gewicht</string>
    <string name="welcome_gender_male">Mann</string>
    <string name="welcome_gender_female">Frau</string>

    <string name="history_attention_text">Achtung: Die Angaben sind ohne Gewähr!</string>
    <string name="history_create">Erstellen</string>
    <string name="history_title">Trinkverlauf</string>
    <string name="history_datetime">Zeitpunkt</string>
    <string name="history_drink_type">Getränk</string>
    <string name="history_drink_amount">Menge</string>
    <string name="history_reset_data">Daten löschen</string>
    <string name="history_alcohol_total_text">Total:</string>
    <string name="history_alcohol_level_text">Promille</string>
    <string name="history_text_default_alcohol_level">0</string>
    <string name="history_no_drinks">Noch keine Getränke erfasst</string>

    <string name="create_title">Getränk eintragen</string>
    <string name="create_select_drink">Getränk auswählen</string>
    <string name="create_input_amount">Menge</string>
    <string name="create_text_unit_initial">dl</string>
</resources>