<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adapter_history_item"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:weightSum="100">

    <TextView
        android:id="@+id/adapter_history_datetime"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="35"
        android:gravity="center"
        android:text="@string/history_datetime" />

    <TextView
        android:id="@+id/adapter_history_drink_type"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="30"
        android:gravity="center"
        android:text="@string/history_drink_type" />

    <TextView
        android:id="@+id/adapter_history_amount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="35"
        android:gravity="center"
        android:text="@string/history_drink_amount" />

</LinearLayout>
