<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity">

    <TextView
        android:id="@+id/welcome_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/app_name"
        android:textSize="@dimen/welcome_title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_developers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_developers_text"
        android:textSize="@dimen/welcome_developers_text_size"
        app:layout_constraintEnd_toEndOf="@+id/welcome_app_title"
        app:layout_constraintStart_toStartOf="@+id/welcome_app_title"
        app:layout_constraintTop_toBottomOf="@+id/welcome_app_title" />

    <EditText
        android:id="@+id/welcome_input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:autofillHints="@string/welcome_input_name_text"
        android:ems="10"
        android:hint="@string/welcome_input_name_text"
        android:inputType="textPersonName"
        android:textSize="@dimen/welcome_input_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.400" />

    <EditText
        android:id="@+id/welcome_weight_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/welcome_weight_text"
        android:inputType="numberDecimal"
        android:textSize="@dimen/welcome_input_size"
        app:layout_constraintEnd_toEndOf="@+id/welcome_input_name"
        app:layout_constraintStart_toStartOf="@+id/welcome_input_name"
        app:layout_constraintTop_toBottomOf="@+id/welcome_input_name" />

    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/welcome_weight_picker"
        app:layout_constraintStart_toStartOf="@+id/welcome_weight_picker"
        app:layout_constraintTop_toBottomOf="@+id/welcome_weight_picker">

        <RadioButton
            android:id="@+id/welcome_gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_gender_female"
            app:layout_constraintEnd_toStartOf="@+id/welcome_gender_male"
            app:layout_constraintStart_toStartOf="@+id/welcome_weight_picker"
            app:layout_constraintTop_toBottomOf="@+id/welcome_weight_picker" />

        <RadioButton
            android:id="@+id/welcome_gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_gender_male"
            app:layout_constraintBottom_toBottomOf="@+id/welcome_gender_female"
            app:layout_constraintEnd_toEndOf="@+id/welcome_weight_picker"
            app:layout_constraintStart_toEndOf="@+id/welcome_gender_female"
            app:layout_constraintTop_toTopOf="@+id/welcome_gender_female" />
    </RadioGroup>

    <Button
        android:id="@+id/welcome_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/app_confirm_button"
        android:textSize="@dimen/app_confirm_button_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>